--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_CmbCuenta_provisiones_debito.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_CmbCuenta_provisiones_debito.cshtml
@@ -2,7 +2,7 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdCtaCble";
+        settings.Name = "IdCtaCble_prov_debito";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
