--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_provisiones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_ctble_provisiones.cshtml
@@ -73,7 +73,7 @@
 
         settings.Columns.Add(column =>
         {
-            column.FieldName = "pc_Cuenta_prov_credito";
+            column.FieldName = "pc_Cuenta";
             column.Caption = "Cuenta Credito";
             column.Width = Unit.Percentage(20);
             column.EditFormSettings.Visible = DefaultBoolean.False;
