--- a/ERP/Core.Erp.Web/Areas/General/Views/Impuesto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Impuesto/Anular.cshtml
@@ -79,7 +79,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCtaCble">Cta. Cble Impuesto</label>
-                    @Html.Partial("_CmbCuenta_Cta_Impuesto", Model)
+                    @Html.Partial("_CmbCuenta_Cta_Impuesto", Model.IdCtaCble)
                     @Html.ValidationMessageFor(q => q.info_impuesto_ctacble.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -90,7 +90,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCtaCble_vta">Cta. Cble Vta</label>
-                    @Html.Partial("_CmbCuenta_Vta_Impuesto", Model)
+                    @Html.Partial("_CmbCuenta_Vta_Impuesto", Model.IdCtaCble_vta)
                     @Html.ValidationMessageFor(q => q.info_impuesto_ctacble.IdCtaCble_vta, "", new { @class = "text-danger" })
                 </div>
             </div>
