--- a/ERP/Core.Erp.Web/Areas/General/Views/Impuesto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Impuesto/Nuevo.cshtml
@@ -86,7 +86,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="info_impuesto_ctacble.IdCtaCble_vta">Cta. Cble Impuesto</label>
-                    @Html.Partial("_CmbCuenta_Cta_Impuesto", Model)
+                    @Html.Partial("_CmbCuenta_Cta_Impuesto", Model.IdCtaCble)
                     @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -97,7 +97,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="info_impuesto_ctacble.IdCtaCble_vta">Cta. Cble Vta</label>
-                    @Html.Partial("_CmbCuenta_Vta_Impuesto", Model)
+                    @Html.Partial("_CmbCuenta_Vta_Impuesto", Model.IdCtaCble_vta)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_vta, "", new { @class = "text-danger" })
                 </div>
             </div>
