--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/Index.cshtml
@@ -8,6 +8,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+
+<script>
+
+
+    function OnSelectedNominaChanged() {
+        GridViewPartial_cta_contable_sueldo_pagar.GetEditor("IdNominaTipo").PerformCallback();
+    }
+    function NominaComboBox_BeginCallback(s, e) {
+        e.customArgs["IdNomina"] = IdNomina.GetValue();
+    }
+
+</script>
+
 @using (Html.BeginForm("Index", "ParametrosContable", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
 
@@ -363,33 +376,3 @@
 
 }
 
-
-<script>
-
-    $(function () {
-
-        $('#fechaingreso').datepicker({
-            autoclose: true
-        })
-    })
-
-    $(function () {
-
-        $('#fechasalida').datepicker({
-            autoclose: true
-        })
-    })
-    $(function () {
-
-        $('#pe_fechaNacimiento').datepicker({
-            autoclose: true
-        })
-    })
-    function OnSelectedNominaChanged() {
-        GridViewPartial_cta_contable_sueldo_pagar.GetEditor("IdNomina").PerformCallback();
-    }
-    function NominaComboBox_BeginCallback(s, e) {
-        e.customArgs["IdNomina"] = IdNomina.GetValue();
-    }
-
-</script>
