--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_CmbNomina.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_CmbNomina.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Web.UI.WebControls;
+﻿
+@using System.Web.UI.WebControls;
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
@@ -6,17 +7,18 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "ParametrosContable", Action = "CmbNomina", Area = "RRHH" };
+        settings.CallbackRouteValues = new { Controller = "ParametrosContables", Action = "CmbNomina", Area = "RRHH" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
+        settings.Properties.TextField = "Su_Descripcion";
         settings.Properties.TextFormatString = "[{0}] {1}";
+        settings.Properties.ValueField = "IdNomina_Tipo";
         settings.Properties.ValueType = typeof(int);
-        settings.Properties.Columns.Add("IdNominaTipo", "ID", 10);
+        settings.Properties.Columns.Add("IdNomina_Tipo", "ID", 10);
         settings.Properties.Columns.Add("Descripcion", "Descripción", 90);
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedNominaChanged";
     })
-
-      .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.ParametrosContableController().get_list_bajo_demanda_nomina, new Core.Erp.Web.Areas.RRHH.Controllers.ParametrosContableController().get_info_bajo_demanda)
-    .Bind((Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_Parametros_Info) || Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_Config_Param_contable_Info) || Model.GetType() == typeof(List<Core.Erp.Info.RRHH.ro_Config_Param_contable_Info>)) ? "" : Model);
-
-    }
+     .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.ParametrosContableController().get_list_bajo_demanda_nomina, new Core.Erp.Web.Areas.RRHH.Controllers.ParametrosContableController().get_info_bajo_demanda_prov_nomina)
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_Parametros_Info) ? "" : (Model == 0 ? "" : Model));
+}
 @comboBox.GetHtml()
