--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_contable_sueldo_pagar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_contable_sueldo_pagar.cshtml
@@ -38,9 +38,16 @@
 
         settings.Columns.Add(column =>
         {
+            column.FieldName = "Descripcion";
+            column.Caption = "Nomina";
+            column.Width = Unit.Percentage(20);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
             column.FieldName = "IdNomina";
             column.Caption = "Nomina";
-            column.Width = Unit.Percentage(35);
+            column.Width = Unit.Percentage(20);
             column.Visible = false;
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.SetEditItemTemplateContent(c =>
@@ -51,21 +58,22 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdNominaTipo";
-            column.Caption = "Tipo nomina";
-            column.Width = Unit.Percentage(20);
+            column.Caption = "Tipo Liquidacion nomina";
+            column.Width = Unit.Percentage(35);
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.EditorProperties().ComboBox(p =>
             {
-                p.CallbackRouteValues = new { Controller = "ParametrosContable", Action = "cargar_tipo_liquidacion_nomina", Area = "RRHH" };
+                p.CallbackRouteValues = new { Controller = "ParametrosContable", Action = "CargarNomina", Area = "RRHH" };
                 p.TextField = "DescripcionProcesoNomina";
                 p.ValueField = "IdNomina_TipoLiqui";
                 p.ValueType = typeof(int);
                 //p.ClientSideEvents.Init = "function(s,e){s.PerformCallback();}";
-                p.BindList(ViewBag.lst_grupos);
-                p.ClientSideEvents.BeginCallback = "GrupoComboBox_BeginCallback";
+                p.BindList(ViewBag.lst_bodega);
+                p.ClientSideEvents.BeginCallback = "NominaComboBox_BeginCallback";
                 p.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
             });
         });
+
 
 
         settings.Columns.Add(column =>
