--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_contable_sueldo_pagar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_contable_sueldo_pagar.cshtml
@@ -75,20 +75,24 @@
         });
 
 
-
         settings.Columns.Add(column =>
         {
-            column.FieldName = "IdCtaCble";
-            column.Caption = "Cta. contable";
+            column.FieldName = "pc_Cuenta";
+            column.Caption = "Cuenta";
+            column.Width = Unit.Percentage(25);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdCtaCble_sueldo";
+            column.Caption = "Cuenta";
             column.Width = Unit.Percentage(35);
-            column.EditorProperties().ComboBox(p =>
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
             {
-                p.Columns.Add("IdCtaCble", "Cta. contable").Width = Unit.Percentage(20);
-                p.Columns.Add("pc_Cuenta", "cta. contable").Width = Unit.Percentage(70);
-                p.ValueField = "IdCtaCble";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_cta_contable;
-                p.Width = Unit.Percentage(100);
+
+                Html.RenderPartial("_CmbCuenta_sueldo_x_pagar", DataBinder.Eval(c.DataItem, "IdCtaCble_sueldo"));
             });
         });
 
