--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_contable_sueldo_pagar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParametrosContable/_GridViewPartial_cta_contable_sueldo_pagar.cshtml
@@ -68,7 +68,7 @@
                 p.ValueField = "IdNomina_TipoLiqui";
                 p.ValueType = typeof(int);
                 //p.ClientSideEvents.Init = "function(s,e){s.PerformCallback();}";
-                p.BindList(ViewBag.lst_bodega);
+               // p.BindList(ViewBag.lst_nomina_tipo);
                 p.ClientSideEvents.BeginCallback = "NominaComboBox_BeginCallback";
                 p.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
             });
