--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ImportacionDiarios/_GridViewPartial_ImportacionDiarios.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ImportacionDiarios/_GridViewPartial_ImportacionDiarios.cshtml
@@ -12,9 +12,14 @@
         settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
 
         //Configuración checkbox
-        settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowSelectCheckbox = true;
-        settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
+        //settings.CommandColumn.Visible = true;
+        //settings.CommandColumn.ShowSelectCheckbox = true;
+        //settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
+
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "ImportacionDiarios", Action = "EditingAddNew", Area = "Contabilidad" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ImportacionDiarios", Action = "EditingUpdate", Area = "Contabilidad" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ImportacionDiarios", Action = "EditingDelete", Area = "Contabilidad" };
 
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
@@ -57,7 +62,25 @@
         };
 
         settings.Columns.Add("tipo_documento", "Tipo documento").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("IdCtaCble", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pc_Cuenta";
+            column.Caption = "Cuenta";
+            column.Width = Unit.Percentage(25);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdCtaCble";
+            column.Caption = "Cuenta";
+            column.Width = Unit.Percentage(25);
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
+            {
+                Html.RenderPartial("CmbCuenta", DataBinder.Eval(c.DataItem, "IdCtaCble"));
+            });
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "Fecha";
