--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
@@ -258,7 +258,7 @@
 
 <script>
 
-                $("#Valor_a_pagar").keyup(function () {
+                $("#Valor_a_pagar").change(function () {
                     armar_diario();
                 });
 
@@ -270,7 +270,8 @@
                         Valor_a_pagar: $("#Valor_a_pagar").val(),
                         observacion: $("#observacion").val(),
                         IdEmpresa: $("#IdEmpresa").val(),
-                        IdTransaccionSession: $("#IdTransaccionSession").val()
+                        IdTransaccionSession: $("#IdTransaccionSession").val(),
+                        IdTipo_Persona: $("#IdTipo_Persona").val()
                     }
                     $.ajax({
                         type: 'POST',
